2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtkcombobox.c (gtk_combo_box_menu_size_request): width of
	popup can now be as large as the combo's width

	* gtk/gtkmenuitem.c: Added a delay for showing submenus.

	* gtk/gtktreeview.c: fix "Mark all does not select all (passive
	focus makes item look unselected)". Passive focus is now replaced
	with the selection indicator whenever treeview is in multiple
	selection mode without checkboxes.

	* gtk/gtktreeview.c: (check_if_can_focus) Added NULL checks to prevent
	access to deleted rows.

	* gtk/gtktextbuffer.c (clipboard_clipboard_buffer_received):
	* gtk/gtktextbufferserialize.c: improved clipboard, handle anonymous
	tags.

	* gtk/gtkmenushell.c (gtk_real_menu_shell_move_current): Added 
	comment to document reason for commenting out a block of code

	* gtk/gtktextview.c: All text before cursor isn't needed to be set to
	surroundings, only the last non-whitespace character before the
	cursor (we'll use the last non-whitespace before the beginning of
	current line though)

	* gtk/gtkcellrenderertoggle.c: Code cleanup

2005-07-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtkcellview.c (gtk_cell_view_size_allocate): adjust cell
	width to avoid truncation issues.

2005-07-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* apply all patches from 2.6.4-1.osso34.1

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.4 ===

	* NEWS: Updates

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenutoolbutton.c (button_state_changed_cb): 
	Fix prelighting.  (#157392, Vincent Noel, patch by
	Christian Persch)

	* gtk/gtkicontheme.c (theme_lookup_icon): Make 
	icon data caching work again.  (#168851, Alexander Larsson)

	* gdk-pixbuf/gdk-pixbuf.c:
	* gdk-pixbuf/gdk-pixbuf-features.h.in:
	* gtk/xdgmime/xdgmime.[hc]:
	Revert the previous change, since it breaks
	bin compat.

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkkeyuni.c
	* gdk/gdkpixbuf-drawable.c